--- a/Esbic/app/src/main/res/layout/setting_need_password.xml
+++ b/Esbic/app/src/main/res/layout/setting_need_password.xml
@@ -24,9 +24,9 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="请输入密码"
-                android:textSize="@dimen/width35"
+                android:textSize="@dimen/width30"
                 android:textColor="#FFFFFF"
-                android:layout_height="@dimen/width60" />
+                android:layout_height="wrap_content" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/width57"
