--- a/Esbic/app/src/main/res/layout/setting_date_set.xml
+++ b/Esbic/app/src/main/res/layout/setting_date_set.xml
@@ -23,6 +23,11 @@
             android:text="返回"/>
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/width8"
+        android:background="@drawable/line"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
