修改消息、通话、报警记录的界面，更改亮度、音量的调整图标

--- a/Esbic/app/src/main/res/layout/call_record_item.xml
+++ b/Esbic/app/src/main/res/layout/call_record_item.xml
@@ -6,7 +6,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_width="@dimen/width348"
-        android:layout_height="@dimen/width112"
+        android:layout_height="@dimen/width90"
         android:orientation="horizontal"
         android:background="@drawable/call_record_item_selected">
 
@@ -27,16 +27,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/width15"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/record_from"
                 android:gravity="center|left"
-                android:layout_marginTop="@dimen/width7"
+                android:layout_marginTop="@dimen/width14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/text_23_ffffff"
-                android:text="中心管理机"/>
+                style="@style/text_26_ffffff"
+                android:text="05楼05单元05层05房间"/>
 
                 <TextView
                     android:id="@+id/record_time"
@@ -44,17 +43,10 @@
                     android:layout_marginTop="@dimen/width4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/text_23_ffffff"
-                    android:text="2016年1月26日"/>
+                    style="@style/text_18_ffffff"
+                    android:text="2016年1月1日 "/>
 
-                <TextView
-                    android:id="@+id/record_time_two"
-                    android:gravity="center|left"
-                    android:layout_marginTop="@dimen/width4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/text_23_ffffff"
-                    android:text="12:00-12:30"/>
+
             </LinearLayout>
 
     </LinearLayout>
