--- a/Esbic/app/src/main/res/layout/main_activity.xml
+++ b/Esbic/app/src/main/res/layout/main_activity.xml
@@ -98,19 +98,36 @@
             android:layout_gravity="right"
             android:layout_marginRight="@dimen/width62"
             android:orientation="horizontal">
-          <TextView
-              android:id="@+id/weather"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="多云"
-              android:layout_marginTop="@dimen/width35"
-              style="@style/text_36_ffffff"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                  android:id="@+id/weather"
+                  android:layout_gravity="right"
+                  android:layout_width="wrap_content"
+                  android:layout_height="@dimen/width35"
+                  android:text="未知"
+                  android:layout_marginTop="@dimen/width5"
+                  style="@style/text_30_ffffff"/>
+                <TextView
+                    android:id="@+id/weather_tmp"
+                    style="@style/text_25_ffffff"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/width35"
+                    android:layout_marginTop="@dimen/width10"
+                    android:text="0~10C" />
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/weather_icon"
                 android:layout_width="@dimen/width118"
                 android:layout_height="@dimen/width84"
                 android:layout_marginLeft="@dimen/width10"
                 android:background="@drawable/weather_9"/>
+
         </LinearLayout>
         <!--温度，最高低温度，时间，天气结束 -->
         <!--刷新开始-->
