--- a/Esbic/app/src/main/res/values/colors.xml
+++ b/Esbic/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="huise">#949494</color>
     <color name="zise">#9A32CD</color>
     <color name="hongse">#CD0000</color>
+    <color name="popup_main_background">#b0000000</color>
+    <color name="black">#000000</color>
+    <color name="choose_eara_item_press_color">#f4f4f4</color>
+    <color name="white">#ffffff</color>
+    <color name="no_color">#00000000</color>
 </resources>
