--- a/Esbic/app/src/main/res/layout/call_main.xml
+++ b/Esbic/app/src/main/res/layout/call_main.xml
@@ -44,18 +44,17 @@
                 <ListView
                     android:id="@+id/hostory_list"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/width46"
+                    android:layout_marginTop="@dimen/width30"
                     android:layout_marginBottom="@dimen/width26"
-                    android:divider="#00000000"
                     android:layout_width="@dimen/width356"
-                    android:layout_height="@dimen/width427"/>
+                    android:layout_height="@dimen/width443"/>
                 <LinearLayout
                     android:id="@+id/control_help"
                     android:layout_gravity="center"
                     android:layout_width="@dimen/width380"
                     android:visibility="gone"
                     android:layout_height="@dimen/width444"
-                    android:layout_marginTop="@dimen/width66"
+                    android:layout_marginTop="@dimen/width55"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="match_parent"
@@ -69,20 +68,27 @@
                         android:layout_height="@dimen/width50"
                         style="@style/text_22_ffffff"
                         android:gravity="center|left"
-                        android:text="②楼栋号+单元号+楼层号"/>
+                        android:text="① 楼栋号+单元号+楼层号+房间号"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/width50"
                         android:gravity="center|left"
                         style="@style/text_22_ffffff"
                         android:layout_marginLeft="@dimen/width30"
-                        android:text="+房间号"/>
+                        android:text="例如： 05050101"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/width50"
                         style="@style/text_22_ffffff"
                         android:gravity="center|left"
-                        android:text="①楼层号+房间号"/>
+                        android:text="② 楼层号+房间号（同一单元）"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/width50"
+                        android:gravity="center|left"
+                        style="@style/text_22_ffffff"
+                        android:layout_marginLeft="@dimen/width30"
+                        android:text="例如： 0101"/>
 
                 </LinearLayout>
                 <LinearLayout
