1、修改图片的分辨率，提高清晰度； 2、修改BaseActivity，加速Activity创建； 3、一堆功能优化； 4、一堆Bug修复；

--- a/Esbic/app/src/main/res/values/styles.xml
+++ b/Esbic/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyTheme" parent="@android:style/Theme.Black.NoTitleBar">
+        <item name="android:windowBackground">@drawable/destop_bg</item>
+    </style>
+
     <style name="dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item><!--边框-->
         <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
