--- a/Esbic/app/src/main/res/drawable/alarm_record.xml
+++ b/Esbic/app/src/main/res/drawable/alarm_record.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:drawable="@drawable/message_alarm_on" android:state_pressed="true"></item>
-<item android:drawable="@drawable/message_alarm_off" android:state_pressed="false"></item>
+    <item android:drawable="@drawable/home_top_icon3" android:state_pressed="false"></item>
+    <item android:drawable="@drawable/top_icon_click3" android:state_pressed="true"></item>
 </selector>
