--- a/Esbic/app/src/main/res/values/styles.xml
+++ b/Esbic/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
 
     <style name="MyTheme" parent="@android:style/Theme.Black.NoTitleBar">
         <item name="android:windowBackground">@drawable/destop_bg</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="dialog" parent="@android:style/Theme.Dialog">
