优化界面返回按钮

--- a/Esbic/app/src/main/res/layout/setting_need_password.xml
+++ b/Esbic/app/src/main/res/layout/setting_need_password.xml
@@ -1,97 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_3"
-    >
-
+    android:background="@drawable/bg_3" >
 
     <LinearLayout
-        android:layout_width="@dimen/width1046"
-        android:layout_height="@dimen/width567"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal"
-        android:background="@drawable/bg_2">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/width93"
+        android:background="@drawable/top_bg">
+        <ImageButton
+            android:id="@+id/security_setting_passwd_back"
+            android:layout_marginLeft="@dimen/width50"
+            android:layout_width="@dimen/width36"
+            android:layout_height="@dimen/width81"
+            android:background="@drawable/top_back" />
+        <TextView
+            android:id="@+id/security_setting_passwd_back2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/width81"
+            android:gravity="center_vertical"
+            style="@style/text_25_ffffff"
+            android:text="返回"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/width124"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="请输入密码"
-                android:textSize="@dimen/width30"
-                android:textColor="#FFFFFF"
-                android:layout_height="wrap_content" />
+            android:layout_width="@dimen/width1046"
+            android:layout_height="@dimen/width567"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_2">
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/width57"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/width26"
-                >
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/width124"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <TextView
-                    android:id="@+id/need_pwd_num_one"
-                    android:textSize="@dimen/width40"
-                    android:layout_width="@dimen/width57"
-                    android:layout_height="@dimen/width57"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
                     android:gravity="center"
-                    android:password="true"
-                    android:background="@drawable/input_box_2"/>
-                <TextView
-                    android:id="@+id/need_pwd_num_two"
-                    android:textSize="@dimen/width40"
-                    android:layout_marginLeft="@dimen/width16"
-                    android:gravity="center"
-                    android:password="true"
-                    android:layout_width="@dimen/width57"
+                    android:text="请输入密码"
+                    android:textSize="@dimen/width30"
+                    android:textColor="#FFFFFF"
+                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="@dimen/width57"
-                    android:background="@drawable/input_box_2"/>
-                <TextView
-                    android:id="@+id/need_pwd_num_three"
-                    android:textSize="@dimen/width40"
-                    android:gravity="center"
-                    android:password="true"
-                    android:layout_marginLeft="@dimen/width16"
-                    android:layout_width="@dimen/width57"
-                    android:layout_height="@dimen/width57"
-                    android:background="@drawable/input_box_2"/>
-                <TextView
-                    android:id="@+id/need_pwd_num_four"
-                    android:textSize="@dimen/width40"
-                    android:gravity="center"
-                    android:password="true"
-                    android:layout_marginLeft="@dimen/width16"
-                    android:layout_width="@dimen/width57"
-                    android:layout_height="@dimen/width57"
-                    android:background="@drawable/input_box_2"/>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/width26"
+                    >
+                    <TextView
+                        android:id="@+id/need_pwd_num_one"
+                        android:textSize="@dimen/width40"
+                        android:layout_width="@dimen/width57"
+                        android:layout_height="@dimen/width57"
+                        android:gravity="center"
+                        android:password="true"
+                        android:background="@drawable/input_box_2"/>
+                    <TextView
+                        android:id="@+id/need_pwd_num_two"
+                        android:textSize="@dimen/width40"
+                        android:layout_marginLeft="@dimen/width16"
+                        android:gravity="center"
+                        android:password="true"
+                        android:layout_width="@dimen/width57"
+                        android:layout_height="@dimen/width57"
+                        android:background="@drawable/input_box_2"/>
+                    <TextView
+                        android:id="@+id/need_pwd_num_three"
+                        android:textSize="@dimen/width40"
+                        android:gravity="center"
+                        android:password="true"
+                        android:layout_marginLeft="@dimen/width16"
+                        android:layout_width="@dimen/width57"
+                        android:layout_height="@dimen/width57"
+                        android:background="@drawable/input_box_2"/>
+                    <TextView
+                        android:id="@+id/need_pwd_num_four"
+                        android:textSize="@dimen/width40"
+                        android:gravity="center"
+                        android:password="true"
+                        android:layout_marginLeft="@dimen/width16"
+                        android:layout_width="@dimen/width57"
+                        android:layout_height="@dimen/width57"
+                        android:background="@drawable/input_box_2"/>
+                </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="@dimen/width278"
+                android:layout_height="@dimen/width364"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/width250"
+                android:orientation="vertical">
+                <GridView
+                    android:id="@+id/need_pwd_input_keyboard"
+                    android:numColumns="3"
+                    android:horizontalSpacing="@dimen/width25"
+                    android:verticalSpacing="@dimen/width20"
+                    android:layout_width="match_parent"
+                    android:listSelector="#00000000"
+                    android:layout_height="match_parent"></GridView>
+
+            </LinearLayout>
+
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="@dimen/width278"
-            android:layout_height="@dimen/width364"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/width250"
-            android:orientation="vertical">
-            <GridView
-                android:id="@+id/need_pwd_input_keyboard"
-                android:numColumns="3"
-                android:horizontalSpacing="@dimen/width25"
-                android:verticalSpacing="@dimen/width20"
-                android:layout_width="match_parent"
-                android:listSelector="#00000000"
-                android:layout_height="match_parent"></GridView>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
