--- a/Esbic/app/src/main/res/layout/project_query.xml
+++ b/Esbic/app/src/main/res/layout/project_query.xml
@@ -18,9 +18,9 @@
             android:background="@drawable/top_back" />
         <TextView
             android:id="@+id/project_query_back2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             style="@style/text_25_ffffff"
             android:text="返回"/>
     </LinearLayout>
