--- a/Esbic/app/src/main/res/layout/project_setting.xml
+++ b/Esbic/app/src/main/res/layout/project_setting.xml
@@ -17,13 +17,12 @@
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/width50"
             android:background="@drawable/top_back"/>
-
         <TextView
             android:id="@+id/project_setting_back2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             style="@style/text_25_ffffff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="返回"/>
     </LinearLayout>
 
