--- a/Esbic/app/src/main/res/layout/wifi_setting.xml
+++ b/Esbic/app/src/main/res/layout/wifi_setting.xml
@@ -6,19 +6,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/width93"
-        android:background="@drawable/top_bg">
+        android:background="@drawable/top_bg_2">
         <ImageButton
             android:id="@+id/wifi_setting_back"
-            android:layout_gravity="center"
             android:layout_marginLeft="@dimen/width50"
             android:layout_width="@dimen/width36"
-            android:layout_height="@dimen/width81"
+            android:layout_height="match_parent"
             android:background="@drawable/top_back" />
         <TextView
             android:id="@+id/wifi_setting_back2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             style="@style/text_25_ffffff"
             android:text="返回"/>
     </LinearLayout>
