扩大添加设置的点击范围，添加隐藏功能：连点4下首页时间，退出程序，因为10寸机没有返回，测试时非常不方便，故添加此功能

--- a/Esbic/app/src/main/res/layout/main_activity.xml
+++ b/Esbic/app/src/main/res/layout/main_activity.xml
@@ -91,7 +91,7 @@
         >
         <!--温度,最低温度最高温度,时间+天气开始-->
         <LinearLayout
-            android:id="@+id/rel"
+            android:id="@+id/weatherLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/width55"
@@ -140,6 +140,7 @@
             android:background="@drawable/the_white_line"/>
 
         <TextClock
+            android:id="@+id/clock"
             android:layout_gravity="right"
             android:gravity="center"
             android:textSize="@dimen/width95"
